--- a/code/web/template/startSprint.ejs
+++ b/code/web/template/startSprint.ejs
@@ -23,7 +23,7 @@
                                     <input type="date" name="endDate" id="endDate" required>
                                 </div>
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
-                                <button type="submit" class="btn btn-primary" >Demarer</button>
+                                <button type="submit" class="btn btn-primary" >Démarrer</button>
                             </form>
                         </div>
                     </div>
