implementation des tests pour la connexion et l'enregistrement d'un user

--- a/code/web/template/register.ejs
+++ b/code/web/template/register.ejs
@@ -31,7 +31,7 @@
                     </div>
                     <div id="errorJs" class="text-danger text-center"></div><br>
                     <% if (typeof error != 'undefined') { %>
-                    <div class="text-danger text-center"><%= error %></div><br>
+                    <div id="registerError" class="text-danger text-center"><%= error %></div><br>
                     <% } %>
                     <button type="submit" id="btnRegister" class="btn btn-primary">S'inscrire</button>
                 </form>
