--- a/code/web/template/login.ejs
+++ b/code/web/template/login.ejs
@@ -11,9 +11,9 @@
                     <input type="email" id="inputLogin" name="mail" class="form-control form-top" placeholder="address email" required> <br>
                     <input type="password" id="inputPassword"i name="password" class="form-control form-bottom" placeholder="Mot de passe" minlength="8" required> <br>
                     <% if (typeof errorLogin != 'undefined') { %>
-                    <div class="text-danger text-center"><%= errorLogin %></div><br>
+                    <div id="errorDiv" class="text-danger text-center"><%= errorLogin %></div><br>
                     <% } %>
-                    <button class="btn btn-primary text-center" type="submit">SE CONNECTER</button>
+                    <button id="btnLogin" class="btn btn-primary text-center" type="submit">SE CONNECTER</button>
                 </form>
             </div>
         </div>
