implémentation de la déconnection d'un utilisateur

--- a/code/web/template/menu.ejs
+++ b/code/web/template/menu.ejs
@@ -19,6 +19,11 @@
             <a class="nav-link" href="/task/active">tâches sprint actif</a>
         </li>
       <% } %>
-
+   </ul>
+   <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/user/logout">Déconnexion</span></a>
+      </li>
+   </ul>
  </div>
 </nav>
