--- a/code/web/template/project.ejs
+++ b/code/web/template/project.ejs
@@ -17,17 +17,32 @@
                 <input type="text" class="form-control col-8" placeholder="Rechercher" id="searchProject">
             </div>
             <div class="list-group container" id="projectList">
-                <% if (typeof projects != "undefined" && projects.length != 0) { %>
-                    <% projects.forEach((project) => { %>
-                        <a href="backlog/<%= project.id %>" class="list-group-item list-group-item-action flex-column align-items-start">
-                            <h5 class="mb-1"><%= project.name_ %></h5>
-                            <p class="mb-1"><%= project.description_ %></p>
-                            <small><%= project.username %></small>
-                        </a>
-                    <% }); %>
-                <% } else { %>
-                    <p class="text-center">Vous ne participez à aucun projet</p>
-                <% } %>
+                    <table class="table table-hover table-bordered">
+                        <thead>
+                            <tr>
+                                <th scope="col">Nom</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">Propirétaire</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% if (projects.length === 0) { %>
+                                <tr class="text-center">
+                                    <td colspan="3">
+                                        Vous n'avez aucun projet
+                                    </td>
+                                </tr>
+                            <% } %>
+                            <% projects.forEach((project) => { %>
+                               <tr>
+                                    <td><a href="backlog/<%= project.id %>"><%= project.name_ %></a></td>
+                                    <td><%= project.description_ %></td>
+                                    <td><%= project.username %></td>
+                                </tr>
+                            <% }); %>
+                        </tbody>
+                    </table>
+ 
             </div>
         </div>
 
