--- a/code/web/template/project.ejs
+++ b/code/web/template/project.ejs
@@ -11,7 +11,7 @@
         <h1 class="text-center">Accueil</h1>
         <div class="container">
             <div class="row justify-content-center mb-2">
-                <a class="btn btn-primary col-3" href="/project/new" role="button">Créer un projet</a>
+                <a id="btnCreateProject" class="btn btn-primary col-2" href="/project/new" role="button">Créer un projet</a>
             </div>
             <div class="row justify-content-center mb-2">
                 <input type="text" class="form-control col-8" placeholder="Rechercher" id="searchProject">
