implémentation de la terminaison d'un sprint

--- a/code/web/template/backlog.ejs
+++ b/code/web/template/backlog.ejs
@@ -22,6 +22,7 @@
         </div>
 
         <% for (let i=0; i<response.sprints.length; i++) { %>
+            <% if(response.sprints[i].state === "finished") continue %>
             <div class="row">
                 <div class="col">
                     <div class="d-flex justify-content-between mb-1">
@@ -36,7 +37,12 @@
                         </div>
                        <% if (response.sprints[i].state != "active" && response.sprintsUs[i].length > 0) { %>
                         <button type="button" class="btn btn-primary btnShowStartSprintModal" data-sprintId="<%= response.sprints[i].id %>" data-toggle="modal" data-target="#modalStartSprint" <% if (response.activeSprint) {%> disabled <% } %>>
-                            Démarrer sprint
+                            Démarrer
+                        </button>
+                        <% } %>
+                       <% if (response.sprints[i].state === "active" && response.sprintsUs[i].length > 0) { %>
+                        <button type="button" onclick="closeSprint(this)" class="btn btn-danger" data-sprintId="<%= response.sprints[i].id %>">
+                            Terminer
                         </button>
                         <% } %>
                     </div>
@@ -48,13 +54,15 @@
                                 <th scope="col">Nom</th>
                                 <th scope="col">Importance</th>
                                 <th scope="col">Difficulté</th>
-                                <th scope="col">Etat</th>
+                                <% if (response.sprints[i].state === "active") { %>
+                                    <th scope="col">Etat</th>
+                                <% } %>
                             </tr>
                         </thead>
                         <tbody class="sourceAndDestination" data-sprintId="<%= response.sprints[i].id %>">
                             <% if (response.sprintsUs[i].length === 0) { %>
                                 <tr class="text-center">
-                                    <td colspan="4">
+                                    <td colspan="5">
                                         Faites glisser des U.S dans cette zone pour les ajouter
                                     </td>
                                 </tr>
@@ -68,13 +76,16 @@
                                     <td><%= us.label %></td>
                                     <td><%= us.importance %></td>
                                     <td><%= us.difficulty %></td>
-                                    <td>
-                                        <select name="usState" class="usState" data-usId="<%= us.id %>">
-                                            <option value="1" <% if (us.state!=="close") { %> selected<% } %>>Ouverte</option>
-                                            <option value="2" <% if (us.state==="close") { %> selected<% } %>>Fermée</option>
-                                        </select>
-                                    </td>
-                                </tr>
+                                    <% if (response.sprints[i].state === "active") { %>
+                                        <td>
+                                            <select name="usState" class="usState" data-usId="<%= us.id %>">
+                                                <option value="1" <% if (us.state!=="closed") { %> selected<% } %>>Ouverte</option>
+                                                <option value="2" <% if (us.state==="closed") { %> selected<% } %>>Fermée</option>
+                                            </select>
+                                        </td>
+                                    <% } %>
+        
+                               </tr>
                             <% }) %>
                         </tbody>
                     </table>
