--- a/code/web/template/project.ejs
+++ b/code/web/template/project.ejs
@@ -16,7 +16,7 @@
             <div class="row justify-content-center mb-2">
                 <input type="text" class="form-control col-8" placeholder="Rechercher" id="searchProject">
             </div>
-            <div class="list-group container" id="projectList">
+            <div class="list-group container">
                     <table class="table table-hover table-bordered">
                         <thead>
                             <tr>
@@ -25,7 +25,7 @@
                                 <th scope="col">Propirétaire</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="projectList">
                             <% if (projects.length === 0) { %>
                                 <tr class="text-center">
                                     <td colspan="3">
@@ -34,7 +34,7 @@
                                 </tr>
                             <% } %>
                             <% projects.forEach((project) => { %>
-                               <tr>
+                                <tr>
                                     <td><a href="backlog/<%= project.id %>"><%= project.name_ %></a></td>
                                     <td><%= project.description_ %></td>
                                     <td><%= project.username %></td>
@@ -42,7 +42,7 @@
                             <% }); %>
                         </tbody>
                     </table>
- 
+
             </div>
         </div>
 
